Modifications de l'id du bundle

--- a/Abri Vélo Poitiers/Info.plist
+++ b/Abri Vélo Poitiers/Info.plist
@@ -4,12 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>CFBundleDocumentTypes</key>
-	<array/>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.serli.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.serli.poitiers-velo</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
